--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -1,28 +1,28 @@
 <web-app>
-<servlet>
-	<servlet-name>Signin</servlet-name>
-	<servlet-class>com.lxisoft.servlets.SignupServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-	<servlet-name>Signin</servlet-name>
-	<url-pattern>/signup</url-pattern>
-</servlet-mapping>
+	<servlet>
+		<servlet-name>Add</servlet-name>
+		<servlet-class>com.lxisoft.servlet.AddServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Add</servlet-name>
+		<url-pattern>/contactAdd</url-pattern>
+	</servlet-mapping>
 
-<servlet>
-	<servlet-name>AddContact</servlet-name>
-	<servlet-class>com.lxisoft.servlets.AddContactServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-	<servlet-name>AddContact</servlet-name>
-	<url-pattern>/add</url-pattern>
-</servlet-mapping>
+	<servlet>
+		<servlet-name>Delete</servlet-name>
+		<servlet-class>com.lxisoft.servlet.DeleteServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Delete</servlet-name>
+		<url-pattern>/contactDelete</url-pattern>
+	</servlet-mapping>
 
-<servlet>
-	<servlet-name>Login</servlet-name>
-	<servlet-class>com.lxisoft.servlets.LoginServlet</servlet-class>
-</servlet>
-<servlet-mapping>
-	<servlet-name>Login</servlet-name>
-	<url-pattern>/login</url-pattern>
-</servlet-mapping>
-</web-app>
+	<servlet>
+		<servlet-name>Edit</servlet-name>
+		<servlet-class>com.lxisoft.servlet.EditServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Edit</servlet-name>
+		<url-pattern>/contactEdit</url-pattern>
+	</servlet-mapping>
+</web-app>	
