--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -46,11 +46,11 @@
 	</servlet-mapping>
 
 	<servlet>
-	    <servlet-name>Login</servlet-name>
-	    <servlet-class>com.lxisoft.servlet.LoginServlet</servlet-class>
+	    <servlet-name>View</servlet-name>
+	    <servlet-class>com.lxisoft.servlet.ViewServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>Login</servlet-name>
-		<url-pattern>/login</url-pattern>
+		<servlet-name>View</servlet-name>
+		<url-pattern>/view</url-pattern>
 	</servlet-mapping>
 </web-app>	
