--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -57,7 +57,7 @@
 	<security-constraint>
         <web-resource-collection>
             <web-resource-name>Secured</web-resource-name>
-            <url-pattern>/view.jsp</url-pattern>
+            <url-pattern>/home.jsp</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
         </web-resource-collection>
@@ -65,11 +65,13 @@
         <auth-constraint>
             <description></description>
             <role-name>admin</role-name>
+            <role-name>user</role-name>
         </auth-constraint>
    </security-constraint>
    
    <security-role>
       <role-name>admin</role-name>
+      <role-name>user</role-name>
    </security-role>
    
    <login-config>
