--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -75,11 +75,11 @@
    </security-role>
    
    <login-config>
-      <auth-method>BASIC</auth-method>
+      <auth-method>FORM</auth-method>
 
-      <!--<form-login-config>
+      <form-login-config>
          <form-login-page>/login.jsp</form-login-page>
          <form-error-page>/error.jsp</form-error-page>
-      </form-login-config> -->
+      </form-login-config> 
    </login-config>
 </web-app>	
