--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -75,11 +75,17 @@
    </security-role>
    
    <login-config>
-      <auth-method>FORM</auth-method>
+      <auth-method>BASIC</auth-method>
 
-      <form-login-config>
+     <!-- <form-login-config>
          <form-login-page>/login.jsp</form-login-page>
          <form-error-page>/error.jsp</form-error-page>
-      </form-login-config> 
-   </login-config>
+      </form-login-config> -->
+   </login-config> 
+
+   <resource-ref>
+      <res-ref-name>jdbc/tomcat_users</res-ref-name>
+      <res-type>javax.sql.DataSource</res-type>
+      <res-auth>Container</res-auth>
+   </resource-ref>
 </web-app>	
