--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -75,17 +75,11 @@
    </security-role>
    
    <login-config>
-      <auth-method>BASIC</auth-method>
+      <auth-method>FORM</auth-method>
 
-     <!-- <form-login-config>
+      <form-login-config>
          <form-login-page>/login.jsp</form-login-page>
          <form-error-page>/error.jsp</form-error-page>
-      </form-login-config> -->
-   </login-config> 
-
-   <resource-ref>
-      <res-ref-name>jdbc/tomcat_users</res-ref-name>
-      <res-type>javax.sql.DataSource</res-type>
-      <res-auth>Container</res-auth>
-   </resource-ref>
+      </form-login-config> 
+   </login-config>
 </web-app>	
