--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -57,9 +57,9 @@
 	<security-constraint>
         <web-resource-collection>
             <web-resource-name>Secured</web-resource-name>
-            <url-pattern>/view.jsp</url-pattern>
-            <http-method>POST</http-method>
+            <url-pattern>/home.jsp</url-pattern>
             <http-method>GET</http-method>
+            <http-method>POST</http-method>
         </web-resource-collection>
       
         <auth-constraint>
