--- a/UsedCarShowroomApp/src/main/webapp/WEB-INF/web.xml
+++ b/UsedCarShowroomApp/src/main/webapp/WEB-INF/web.xml
@@ -13,17 +13,17 @@
 
 	<context-param>
 		<param-name>jdbcUsername</param-name>
-		<param-value>root</param-value>
+		<param-value>appUser</param-value>
 	</context-param>
 
 	<context-param>
 		<param-name>jdbcPassword</param-name>
-		<param-value>root</param-value>
+		<param-value>123456</param-value>
 	</context-param>
 
 	<servlet>
 		<servlet-name>ControllerServlet</servlet-name>
-		<servlet-class>com.lxisoft.carshowroom.ControllerServlet</servlet-class>
+		<servlet-class>com.lxisoft.carshowroom.servlet.ControllerServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
