--- a/UsedCarShowroomApp/pom.xml
+++ b/UsedCarShowroomApp/pom.xml
@@ -47,8 +47,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.2.3</version>
 				<configuration>
-					<warSourceDirectory>WebContent</warSourceDirectory>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<warName>UsedCarShowroomApp</warName>
 				</configuration>
 			</plugin>
 		</plugins>
