--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -4,9 +4,9 @@
 	<display-name>Contact Application</display-name>
 
 
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
+	<!-- <welcome-file-list>
+		<welcome-file>view/login.jsp</welcome-file>
+	</welcome-file-list> -->
 
 	<servlet>
 		<servlet-name>ContactServlet</servlet-name>
@@ -50,7 +50,7 @@
 		<auth-method>FORM</auth-method>
 		<realm-name>DataSourceRealm</realm-name>
 		<form-login-config>
-			<form-login-page>/view/index.jsp</form-login-page>
+			<form-login-page>/view/login.jsp</form-login-page>
 	 	<form-error-page>/view/error.jsp</form-error-page>
 		</form-login-config>
 
