--- a/VegetableStore/WEB-INF/web.xml
+++ b/VegetableStore/WEB-INF/web.xml
@@ -23,6 +23,12 @@
 
 </servlet>
 
+<servlet>
+
+<servlet-name>AddVegetablePage</servlet-name>
+<servlet-class>com.lxisoft.servlets.AddVegetableServlet</servlet-class>
+  
+</servlet>
 
 <servlet-mapping>
 <servlet-name>WelcomePage</servlet-name>
@@ -32,6 +38,11 @@
 <servlet-mapping>
 <servlet-name>VegetablePage</servlet-name>
 <url-pattern>/my-page</url-pattern>
+</servlet-mapping>
+
+<servlet-mapping>
+<servlet-name>AddVegetablePage</servlet-name>
+<url-pattern>/addpage</url-pattern>
 </servlet-mapping>
 
 </web-app>
