--- a/Dictionary/WEB-INF/web.xml
+++ b/Dictionary/WEB-INF/web.xml
@@ -1,17 +1,18 @@
-<web-app >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
+		http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+    
+    <display-name>DictionaryApplication</display-name>
 
-<description>
-    My Dictionary application
-</description>
-<display-name> Dictionary Application </display-name>
+	<servlet>
+		<servlet-name>dictionaryServlet</servlet-name>
+		<servlet-class>com.lxisoft.controller.DictionaryServlet</servlet-class>
+                         
+	</servlet>
 
-<servlet>
-<servlet-name> Dictionary </servlet-name>
-<servlet-class>com.lxisoft.model.DictionaryServlet</servlet-class>
-</servlet>
+	<servlet-mapping>
+		<servlet-name>dictionaryServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 
-    <servlet-mapping>
-        <servlet-name>Dictionary</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
 </web-app>
