--- a/VegetableStore/WEB-INF/web.xml
+++ b/VegetableStore/WEB-INF/web.xml
@@ -11,18 +11,20 @@
 <servlet>
 
 <servlet-name>VegetablePage</servlet-name>
-<servlet-class>com.lxisoft.servlets.VegetableServlet</servlet-class>
+<servlet-class>com.lxisoft.servlets.ReadAndDeleteVegetableServlet</servlet-class>
 
 </servlet>
 <servlet-mapping>
 <servlet-name>VegetablePage</servlet-name>
 <url-pattern>/vegetable-list</url-pattern>
+<url-pattern>/delete-vegetable</url-pattern>
+
 </servlet-mapping>
 
 <servlet>
 
 <servlet-name>AddVegetablePage</servlet-name>
-<servlet-class>com.lxisoft.servlets.CreateAndDeleteVegetableServlet</servlet-class>
+<servlet-class>com.lxisoft.servlets.CreateVegetableServlet</servlet-class>
 
 </servlet>
 
@@ -42,6 +44,19 @@
 <servlet-mapping>
 <servlet-name>updateVegetablePage</servlet-name>
 <url-pattern>/update-vegetable</url-pattern>
+</servlet-mapping>
+
+
+<servlet>
+
+<servlet-name>imageVegetablePage</servlet-name>
+<servlet-class>com.lxisoft.servlets.ImageServlet</servlet-class>
+
+</servlet>
+
+<servlet-mapping>
+<servlet-name>imageVegetablePage</servlet-name>
+<url-pattern>/image</url-pattern>
 </servlet-mapping>
 
 
