--- a/Dictionary/WEB-INF/web.xml
+++ b/Dictionary/WEB-INF/web.xml
@@ -15,6 +15,34 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>user</web-resource-name>
+			<url-pattern>/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+			<role-name>user</role-name>
+		</auth-constraint>
+	</security-constraint>
 
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>admin</web-resource-name>
+			<url-pattern>/edit</url-pattern>
+			<url-pattern>/delete</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
+
+  <login-config>
+      <auth-method>FORM</auth-method>
+      <form-login-config>
+         <form-login-page>/view/Login-form.jsp</form-login-page>
+         <form-error-page>/view/login-error.jsp</form-error-page>
+      </form-login-config>
+   </login-config>
 
 </web-app>
