--- a/Dictionary/WEB-INF/web.xml
+++ b/Dictionary/WEB-INF/web.xml
@@ -4,6 +4,21 @@
     
     <display-name>DictionaryApplication</display-name>
 
+	<context-param>
+		<param-name>jdbcURL</param-name>
+		<param-value>jdbc:mysql://localhost:3306/lxisoft</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>jdbcUsername</param-name>
+		<param-value>root</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>jdbcPassword</param-name>
+		<param-value>root</param-value>
+	</context-param>
+
 	<servlet>
 		<servlet-name>dictionaryServlet</servlet-name>
 		<servlet-class>com.lxisoft.controller.DictionaryServlet</servlet-class>
