--- a/VegetableStore/WEB-INF/web.xml
+++ b/VegetableStore/WEB-INF/web.xml
@@ -8,6 +8,7 @@
 
   
 
+
 <servlet>
 
 <servlet-name>VegetablePage</servlet-name>
@@ -20,6 +21,13 @@
 <url-pattern>/delete-vegetable</url-pattern>
 
 </servlet-mapping>
+
+<multipart-config>
+    <location>/add-vegetable</location>
+    <max-file-size>20848820</max-file-size>
+    <max-request-size>418018841</max-request-size>
+    <file-size-threshold>1048576</file-size-threshold>
+</multipart-config>
 
 <servlet>
 
