--- a/VegetableStore/pom.xml
+++ b/VegetableStore/pom.xml
@@ -44,7 +44,19 @@
                     <artifactId>maven-clean-plugin</artifactId>
                     <version>3.1.0</version>
                 </plugin>
-
+				
+<plugin>
+    <groupId>org.apache.tomcat.maven</groupId>
+    <artifactId>tomcat7-maven-plugin</artifactId>
+    <version>2.2</version>
+    <configuration>
+        <url>http://localhost:8080/manager/text</url>
+        <server>tomcatserver</server>
+        <path>/vegetablestore</path>
+        <username>admin</username>
+        <password>admin</password>
+    </configuration>
+</plugin>
                 <plugin>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>3.0.2</version>
